# my_auto_car

./: main.py  pyproject.toml  train.py
me/autocar/: autocar1.py  autocar2.py
me/lane/: lane_detect.py
me/opencv/.ipynb_checkpoints/: hands-on-checkpoint.ipynb
me/traffic_light/: test.py  train.py
runs/train/exp2/: opt.yaml
